<resources>
    <string name="app_name">SyntaxDB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="concepts_heading">Concepts</string>
    <string name="categories_heading">Categories</string>
    <string name="syntax_title">Syntax</string>
    <string name="notes_title">Notes</string>
    <string name="example_title">Example</string>
    <string name="languages_heading">Languages</string>
    <string name="pls_wait">Please Wait!!!!</string>
    <string name="save_offline">Save Offline</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="recents">Recents</string>
    <string name="search">Search</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="search_hint">Arrays...</string>
    <string name="nothing_found">Nothing Matched your query</string>
    <string name="no_recents_found">Nothing Found.. Go and Search</string>
    <string name="share">Share</string>
    <string name="about_me">About</string>
    <string name="author_title">Author</string>
    <string name="about_title">About Me</string>
    <string name="about_me_txt">I am Sriram \n  An android dev and Techy Guy developing Apps for my satisfaction</string>
    <string name="profile">Professional Profile</string>
    <string name="linkedin_profile">https://www.linkedin.com/in/sriram-balaji-0465ab43/</string>
    <string name="stack_profile">https://stackoverflow.com/users/5856751/sriram-balaji</string>

</resources>
