<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="concept"
            type="com.shiru.syntaxdb.bean.Concept" />

        <variable
            name="title"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:padding="8dp">

                <TextView
                    android:id="@+id/heading_txt"
                    style="@style/AppTheme.ContentTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@{title}"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/syntax_title_txt"
                    style="@style/AppTheme.TitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/heading_txt"
                    android:layout_margin="@dimen/cpt_heading_mrgn"
                    android:text="@string/syntax_title" />

                <TextView
                    android:id="@+id/syntax_txt"
                    style="@style/AppTheme.ContentTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/syntax_title_txt"
                    android:layout_margin="@dimen/cpt_heading_mrgn"
                    android:text="@{concept.syntax}" />

                <TextView
                    android:id="@+id/notes_title_txt"
                    style="@style/AppTheme.TitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/syntax_txt"
                    android:layout_margin="@dimen/cpt_heading_mrgn"
                    android:text="@string/notes_title" />

                <TextView
                    android:id="@+id/notes_txt"
                    style="@style/AppTheme.ContentTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/notes_title_txt"
                    android:layout_margin="@dimen/cpt_heading_mrgn"
                    android:text="@{concept.notes}" />

                <TextView
                    android:id="@+id/example_title_txt"
                    style="@style/AppTheme.TitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/notes_txt"
                    android:layout_margin="@dimen/cpt_heading_mrgn"
                    android:text="@string/example_title" />

                <TextView
                    android:id="@+id/example_txt"
                    style="@style/AppTheme.ContentTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/example_title_txt"
                    android:layout_margin="@dimen/cpt_heading_mrgn"
                    android:text="@{concept.example}" />

                <Button
                    android:id="@+id/save_offline_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/example_txt"
                    android:backgroundTintMode="src_atop"
                    android:drawableLeft="@drawable/save"
                    android:drawableTint="@android:color/black"
                    android:text="@string/save_offline" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</layout>